// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBlockList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Blocks"
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="page.blockList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Blocks"
        id="page.blockList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="page.blockList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Blocks"
        id="page.blockList.title"
        values={Object {}}
      />
    }
  />
  <styled.div>
    <styled.div>
      <PlusButton
        hideOnDesktop={false}
        onClick={[Function]}
      />
    </styled.div>
    <styled.div />
  </styled.div>
  <form
    onSubmit={[Function]}
  >
    <DndProvider
      backend={[Function]}
      options={
        Object {
          "backends": Array [
            Object {
              "backend": [Function],
              "transition": Object {
                "_isMBTransition": true,
                "check": [Function],
                "event": "mousedown",
              },
            },
            Object {
              "backend": [Function],
              "options": Object {
                "enableMouseEvents": true,
              },
              "preview": true,
              "transition": Object {
                "_isMBTransition": true,
                "check": [Function],
                "event": "touchstart",
              },
            },
          ],
        }
      }
    >
      <LoadingWrapper
        error={null}
        loading={false}
        noData={false}
        noDataContent=" "
      >
        <Component
          customCheckboxStyles={
            Object {
              "width": "100%",
            }
          }
          id="blocksCheckboxGroup"
          name="pageBlocks"
          onChange={[Function]}
          value={
            Array [
              "1",
            ]
          }
        >
          <Draggable
            accept="CHECKBOX"
            id={1}
            index={0}
            key="1"
            onMove={[Function]}
          >
            <Component />
          </Draggable>
          <Draggable
            accept="CHECKBOX"
            id={2}
            index={1}
            key="2"
            onMove={[Function]}
          >
            <Component />
          </Draggable>
        </Component>
      </LoadingWrapper>
      <NavigationContainer
        fixed={true}
        hideOnDesktop={false}
        right={false}
      >
        <BackArrowButton
          onClick={[Function]}
          type="button"
        />
        <NextButton
          disabled={true}
          loading={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Save"
            id="page.blockList.save"
            values={Object {}}
          />
        </NextButton>
      </NavigationContainer>
    </DndProvider>
  </form>
</styled.div>
`;

exports[`PageBlockList: Component should render correctly with loader 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Blocks"
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="page.blockList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Blocks"
        id="page.blockList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="page.blockList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Blocks"
        id="page.blockList.title"
        values={Object {}}
      />
    }
  />
  <styled.div>
    <styled.div>
      <PlusButton
        hideOnDesktop={false}
        onClick={[Function]}
      />
    </styled.div>
    <styled.div />
  </styled.div>
  <form
    onSubmit={[Function]}
  >
    <DndProvider
      backend={[Function]}
      options={
        Object {
          "backends": Array [
            Object {
              "backend": [Function],
              "transition": Object {
                "_isMBTransition": true,
                "check": [Function],
                "event": "mousedown",
              },
            },
            Object {
              "backend": [Function],
              "options": Object {
                "enableMouseEvents": true,
              },
              "preview": true,
              "transition": Object {
                "_isMBTransition": true,
                "check": [Function],
                "event": "touchstart",
              },
            },
          ],
        }
      }
    >
      <LoadingWrapper
        error={null}
        loading={true}
        noData={false}
        noDataContent=" "
      >
        <Component
          customCheckboxStyles={
            Object {
              "width": "100%",
            }
          }
          id="blocksCheckboxGroup"
          name="pageBlocks"
          onChange={[Function]}
          value={
            Array [
              "1",
            ]
          }
        >
          <Draggable
            accept="CHECKBOX"
            id={1}
            index={0}
            key="1"
            onMove={[Function]}
          >
            <Component />
          </Draggable>
          <Draggable
            accept="CHECKBOX"
            id={2}
            index={1}
            key="2"
            onMove={[Function]}
          >
            <Component />
          </Draggable>
        </Component>
      </LoadingWrapper>
      <NavigationContainer
        fixed={true}
        hideOnDesktop={false}
        right={false}
      >
        <BackArrowButton
          onClick={[Function]}
          type="button"
        />
        <NextButton
          disabled={true}
          loading={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Save"
            id="page.blockList.save"
            values={Object {}}
          />
        </NextButton>
      </NavigationContainer>
    </DndProvider>
  </form>
</styled.div>
`;

exports[`PageBlockList: Component should render correctly with one block 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Blocks"
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="page.blockList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Blocks"
        id="page.blockList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="page.blockList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Blocks"
        id="page.blockList.title"
        values={Object {}}
      />
    }
  />
  <styled.div>
    <styled.div>
      <PlusButton
        hideOnDesktop={false}
        onClick={[Function]}
      />
    </styled.div>
    <styled.div />
  </styled.div>
  <form
    onSubmit={[Function]}
  >
    <DndProvider
      backend={[Function]}
      options={
        Object {
          "backends": Array [
            Object {
              "backend": [Function],
              "transition": Object {
                "_isMBTransition": true,
                "check": [Function],
                "event": "mousedown",
              },
            },
            Object {
              "backend": [Function],
              "options": Object {
                "enableMouseEvents": true,
              },
              "preview": true,
              "transition": Object {
                "_isMBTransition": true,
                "check": [Function],
                "event": "touchstart",
              },
            },
          ],
        }
      }
    >
      <LoadingWrapper
        error={null}
        loading={false}
        noData={false}
        noDataContent=" "
      >
        <Component
          customCheckboxStyles={
            Object {
              "width": "100%",
            }
          }
          id="blocksCheckboxGroup"
          name="pageBlocks"
          onChange={[Function]}
          value={
            Array [
              "1",
            ]
          }
        >
          <div
            key="0"
          >
            <Component
              id="checkbox-0"
              isEdit={true}
              value="1"
            >
              <styled.div>
                <Styled(Link)
                  onClick={[Function]}
                  to="/block/1"
                >
                  block 1
                </Styled(Link)>
              </styled.div>
            </Component>
          </div>
        </Component>
      </LoadingWrapper>
      <NavigationContainer
        fixed={true}
        hideOnDesktop={false}
        right={false}
      >
        <BackArrowButton
          onClick={[Function]}
          type="button"
        />
        <NextButton
          disabled={true}
          loading={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Save"
            id="page.blockList.save"
            values={Object {}}
          />
        </NextButton>
      </NavigationContainer>
    </DndProvider>
  </form>
</styled.div>
`;
